--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,10 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+<!-- Footer -->
+<footer class="page-footer font-small footer">
+  <div class="footer-copyright text-center py-3">
+    © 2020 Copyright: Thomas Dergent
+  </div>
+</footer>
+<!-- Footer -->
