--- a/src/app/views/admin-dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/views/admin-dashboard/admin-dashboard/admin-dashboard.component.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="row">
-          <div class="col-sm-4 d-flex align-items-stretch">
+          <div class="col-sm-4 d-flex align-items-stretch card-margin">
             <div class="card">
               <h4 class="card-header text-center">
                 <a href="#" routerLink="/admin/dashboard/journalists" class="fa-stack fa-3x">
@@ -25,7 +25,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-4 d-flex align-items-stretch">
+          <div class="col-sm-4 d-flex align-items-stretch card-margin">
             <div class="card">
               <h4 class="card-header text-center">
                 <a href="#" routerLink="/admin/dashboard/articles" class="fa-stack fa-3x">
@@ -42,7 +42,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-4 d-flex align-items-stretch">
+          <div class="col-sm-4 d-flex align-items-stretch card-margin">
             <div class="card">
               <h4 class="card-header text-center">
                 <a href="#" routerLink="/admin/dashboard/journalists" class="fa-stack fa-3x">
