--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -9,6 +9,9 @@
 
 <nav class="navbar navbar-expand-lg">
   <a class="navbar-brand headerTitle" href="/">UpDate</a>
+  <span class="nav-item" *ngIf="roleAuthenticateService.isLoggedIn()">
+    <a class="nav-link">Welkom {{roleAuthenticateService.user.userName}}!</a>
+  </span>
   <button class="navbar-toggler" type="button" (click)="toggleNavbar()"  data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -17,20 +20,29 @@
       <li class="nav-item active">
         <a class="nav-link "routerLink="/">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item"  *ngIf="notLoggedIn==false">
+      <li class="nav-item" *ngIf="roleAuthenticateService.isJournalist()">
+        <a class="nav-link" routerLink="/journalist/dashboard">Dashboard</a>
+      </li>
+      <li class="nav-item" *ngIf="roleAuthenticateService.isAdministrator()">
+        <a class="nav-link" routerLink="/admin/dashboard">Dashboard</a>
+      </li>
+        <li class="nav-item"  *ngIf="!roleAuthenticateService.isLoggedIn()">
         <a class="nav-link" routerLink="/login">Login</a>
       </li>
-      <li class="nav-item"  *ngIf="notSignedUp==false">
+      <li class="nav-item"  *ngIf="!roleAuthenticateService.isLoggedIn()">
         <a class="nav-link"routerLink="/sign-up">Sign-Up</a>
       </li>
-      <li class="nav-item"  *ngIf="notLoggedIn==true">
+      <li class="nav-item"  *ngIf="roleAuthenticateService.isLoggedIn()">
         <a class="nav-link" (click)="logout()">Logout</a>
       </li>
-      <li class="nav-item" *ngIf="user.role.name=='Journalist'">
-        <a class="nav-link"routerLink="/journalist/dashboard">Dashboard</a>
-      </li>
-      <li class="nav-item" *ngIf="user.role.name=='Admin'">
-        <a class="nav-link"routerLink="/admin/dashboard">Dashboard</a>
+     
+    </ul>
+  </div>
+
+  <div >
+    <ul class="navbar-nav ml-auto" *ngFor="let tag of tags">
+      <li class="nav-item">
+        <a class="nav-link">{{tag.name}}</a>
       </li>
      
     </ul>
