--- a/src/app/views/home/home/home.component.html
+++ b/src/app/views/home/home/home.component.html
@@ -3,6 +3,7 @@
 
 
 <body>
+  <ngx-alerts></ngx-alerts>  
 	<section id="home">
 
 <!-- Page Content -->
@@ -16,11 +17,11 @@
 
 
     <!-- Post Content Column -->
-    <div class="col-md-8">
+    <div class="col-md-10">
 
       <div class="row">
-        <div *ngFor="let articlePublished of articlesPublished" class="col-md-6 card-margin">
-          <div class="card my-4 bootstrapCard h-100">
+        <div *ngFor="let articlePublished of articlesPublished" class="col-md-4 card-margin">
+          <div class="card my-4 shadow bootstrapCard h-100">
             <div class="card-header">
               {{articlePublished.tag.name}}
             </div>
@@ -36,10 +37,10 @@
     </div>
 
     <!-- Sidebar Widgets Column -->
-    <div class="col-md-4">
+    <div class="col-md-2">
 
       <!-- Categories Widget -->
-      <div class="card my-4 bootstrapCard links">
+      <div class="card my-4 bootstrapCard shadow links">
         <div class="card-header">Categorieën</div>
         <div class="card-body">
           <div class="row">
