--- a/src/app/views/journalist-dashboard/journalist-dashboard/journalist-dashboard.component.html
+++ b/src/app/views/journalist-dashboard/journalist-dashboard/journalist-dashboard.component.html
@@ -7,6 +7,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 <body>
+    <ngx-alerts></ngx-alerts>   
     <section id="journalist-dashboard">
         <div class="container">
 
