--- a/src/app/views/tag/tag/tag.component.html
+++ b/src/app/views/tag/tag/tag.component.html
@@ -14,11 +14,11 @@
   <div class="row">
 
     <!-- Post Content Column -->
-    <div class="col-md-8">
+    <div class="col-md-10">
 
       <div class="row">
-        <div *ngFor="let articlePublished of articlesPublished" class="col-6">
-          <div class="card my-4 bootstrapCard h-100">
+        <div *ngFor="let articlePublished of articlesPublished" class="col-md-6 card-margin">
+          <div class="card my-4 bootstrapCard shadow h-100">
             <div class="card-header">
               {{articlePublished.tag.name}}
             </div>
@@ -34,10 +34,10 @@
     </div>
 
     <!-- Sidebar Widgets Column -->
-    <div class="col-md-4">
+    <div class="col-md-2">
 
       <!-- Categories Widget -->
-      <div class="card my-4 bootstrapCard links">
+      <div class="card my-4 bootstrapCard shadow links">
         <div class="card-header">Categorieën</div>
         <div class="card-body">
           <div class="row">
