adding picture upload

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -39,7 +39,7 @@
     </ul>
   </div>
 
-  <div >
+  <div class="collapse navbar-collapse">
     <ul class="navbar-nav ml-auto" *ngFor="let tag of tags">
       <li class="nav-item">
         <a class="nav-link">{{tag.name}}</a>
