--- a/src/app/views/home/home/home.component.html
+++ b/src/app/views/home/home/home.component.html
@@ -25,6 +25,7 @@
             <div class="card-header">
               {{articlePublished.tag.name}}
             </div>
+            <img class="homeImage" [src]="articlePublished.image" >
             <div class="card-body">
               <h5 class="card-title"> {{articlePublished.title}}</h5>
               <p class="card-text">{{articlePublished.shortSummary}}</p>
