--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -2,7 +2,7 @@
 
 
 .navbar{
-    background-color: $buttonColor;
+    background-color: $titleColor;
     color: white !important;
     a{
       color: white;
