--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -55,7 +55,7 @@ $UpDate-theme: mat-light-theme((
 
 @import "./detailsArticle";
 
-
+@import "./articleImage";
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
@@ -79,5 +79,4 @@ a:hover{
   cursor: pointer;
   text-decoration: none !important;
 }
-
 
