--- a/src/app/views/edit-article/edit-article/edit-article.component.html
+++ b/src/app/views/edit-article/edit-article/edit-article.component.html
@@ -49,6 +49,9 @@
                                     #subTitle="ngModel" class="form-control" required />
                             </div>
                             <div class="form-group col-md-6">
+                                <label for="image">Kies een afbeelding</label>
+                                <input type="file" [(ngModel)]="article.image" name="image" class="form-control " (change)="onChange($event)" required/>
+                                <img [src]="article.image" class="articleImage" alt="">  
                             </div>
                         </div>
                         <div class="form-group">
