--- a/src/app/views/publish-article/publish-article/publish-article.component.html
+++ b/src/app/views/publish-article/publish-article/publish-article.component.html
@@ -23,6 +23,11 @@
         </div>
     </div>
     <div class="row">
+        <div class="col-md-12">
+            <img class="articleImage shadow" [src]="article.image" alt="{{article.title}}">
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-12 shortSummary">
             <p>{{article.shortSummary}}</p>
         </div>
