--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 <!-- Footer -->
 <footer class="page-footer font-small footer">
   <div class="footer-copyright text-center py-3">
-    © 2020 Copyright: Thomas Dergent
+    © 2020 Copyright: Thomas Dergent - <a href="https://thomasdergent.com/" target="_blank">Website</a>
   </div>
 </footer>
 <!-- Footer -->
