--- a/src/app/views/admin-dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/views/admin-dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,8 @@
 <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 
+
+<ngx-alerts></ngx-alerts>
+
     <section id="admin-dashboard" class="bootstrapCard">
       <div class="container">
 
