--- a/src/scss/_bootstrapCard.scss
+++ b/src/scss/_bootstrapCard.scss
@@ -1,7 +1,7 @@
 @import "./variables";
 
 .card-margin{
-  margin-bottom: 40px !important;
+  margin-bottom: 10px !important;
 }
 
 .links{
@@ -12,13 +12,13 @@
   a:hover{
     color: $titleColor !important;
   }
-}
-
-@media screen and (min-width: 769px) {
-  .links{
-    position: fixed !important;
-    width: 20%;
+  
+  ul{
+    list-style: disc;
+    text-align: left !important;
   }
+
+
 }
 
 .publish {
