--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -7,7 +7,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color:  #415A77;">
   <a class="navbar-brand headerTitle" href="/">UpDate</a>
   <span class="nav-item" *ngIf="roleAuthenticateService.isLoggedIn()">
     <a class="nav-link">Welkom {{roleAuthenticateService.user.userName}}!</a>
@@ -18,32 +18,22 @@
   <div class="collapse navbar-collapse" [ngClass]="{'show': navbarOpen, 'navbarOpen': true}" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link "routerLink="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link "routerLink="/">Home</a>
       </li>
-      <li class="nav-item" *ngIf="roleAuthenticateService.isJournalist()">
+      <li class="nav-item active" *ngIf="roleAuthenticateService.isLoggedIn() && roleAuthenticateService.isJournalist()">
         <a class="nav-link" routerLink="/journalist/dashboard">Dashboard</a>
       </li>
-      <li class="nav-item" *ngIf="roleAuthenticateService.isAdministrator()">
+      <li class="nav-item active" *ngIf="roleAuthenticateService.isLoggedIn() && roleAuthenticateService.isAdministrator()">
         <a class="nav-link" routerLink="/admin/dashboard">Dashboard</a>
       </li>
-        <li class="nav-item"  *ngIf="!roleAuthenticateService.isLoggedIn()">
+        <li class="nav-item active"  *ngIf="!roleAuthenticateService.isLoggedIn()">
         <a class="nav-link" routerLink="/login">Login</a>
       </li>
-      <li class="nav-item"  *ngIf="!roleAuthenticateService.isLoggedIn()">
+      <li class="nav-item active"  *ngIf="!roleAuthenticateService.isLoggedIn()">
         <a class="nav-link"routerLink="/sign-up">Sign-Up</a>
       </li>
-      <li class="nav-item"  *ngIf="roleAuthenticateService.isLoggedIn()">
+      <li class="nav-item active"  *ngIf="roleAuthenticateService.isLoggedIn()">
         <a class="nav-link" (click)="logout()">Logout</a>
       </li>
-     
-    </ul>
-  </div>
-
-  <div class="collapse navbar-collapse">
-    <ul class="navbar-nav ml-auto" *ngFor="let tag of tags">
-      <li class="nav-item">
-        <a class="nav-link">{{tag.name}}</a>
-      </li>
-     
     </ul>
   </div>
