--- a/src/app/views/edit-article/edit-article/edit-article.component.html
+++ b/src/app/views/edit-article/edit-article/edit-article.component.html
@@ -8,8 +8,14 @@
 
 <ngx-alerts></ngx-alerts>
 
+<div  *ngIf="spinner"> 
+    <div role="status"> 
+        <p id="loading"></p> 
+    </div> 
+</div> 
 
-<section id="addArticle" class="bootstrapCard">
+
+<section id="addArticle" class="bootstrapCard" *ngIf="loaded">
     <div class="section-title" data-aos="fade-left">
         <h2>Artikel bewerken</h2>
     </div>
