--- a/src/app/views/sign-up/sign-up/sign-up.component.html
+++ b/src/app/views/sign-up/sign-up/sign-up.component.html
@@ -15,7 +15,7 @@
         <div class="user_card">
             <div class="d-flex justify-content-center">
                 <div class="brand_logo_container">
-                    <img src="https://cdn.freebiesupply.com/logos/large/2x/pinterest-circle-logo-png-transparent.png"
+                    <img src="../../../assets/img/UpDate.png"
                         class="brand_logo" alt="Logo">
                 </div>
             </div>
